<resources>
    <string name="app_name">Login1</string>

    <string name="action_settings">Settings</string>

    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>

    <string name="title_activity_login">login</string>
    <string name="title_activity_signup">signup</string>

    <string name="emailhint">Please enter your email</string>
    <string name="passhint">Please enter password</string>
    <string name="title_activity_outputlogin">outputlogin</string>
    <string name="title_activity_outputsignup">outputsignup</string>
    <string name="namehint">Please enter your name</string>
    <string name="dobhint">Please Enter your Date of Birth</string>
    <string name="phonehint">Please Enter Your Phone Number</string>
</resources>
